Run tests on `push` into release branches (#1045)

--- a/.github/workflows/build-and-run-tests.yml
+++ b/.github/workflows/build-and-run-tests.yml
@@ -2,9 +2,13 @@ name: "UTBot Java: build and run tests"
 
 on:  
   push:
-    branches: [main]
+    branches:
+      - 'main'
+      - 'unit-test-bot/r**'
   pull_request:
-    branches: [main]
+    branches:
+      - 'main'
+      - 'unit-test-bot/r**'
 
 env:
   REGISTRY: ghcr.io
