Gradle cache usage added #974 (#998)

--- a/.github/workflows/build-and-run-tests-from-branch.yml
+++ b/.github/workflows/build-and-run-tests-from-branch.yml
@@ -66,21 +66,41 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Check out ${{ github.event.inputs.commit_sha }} commit
         if: github.event.inputs.commit_sha != ''
         run: |
           git config --global --add safe.directory ${GITHUB_WORKSPACE}
           git fetch
           git checkout ${{ github.event.inputs.commit_sha }}
+
       - name: Run monitoring
         run: |
           echo Find your Prometheus metrics using label {instance=\"${GITHUB_RUN_ID}-${HOSTNAME}\"}
           chmod +x ./scripts/project/monitoring.sh
           ./scripts/project/monitoring.sh ${{ secrets.PUSHGATEWAY_HOSTNAME }} ${{ secrets.PUSHGATEWAY_USER }} ${{ secrets.PUSHGATEWAY_PASSWORD }}
+
+      # cache will use the key you provided and contains the files you specify in path.
+      #
+      # When key matches an existing cache, it's called a cache hit, and the action
+      # restores the cached files to the path directory.
+      # When key doesn't match an existing cache, it's called a cache miss, and a new
+      # cache is automatically created if the job completes successfully.
+      #
+      # The cache action first searches for cache hits for key and restore-keys in the
+      # branch containing the workflow run. If there are no hits in the current branch,
+      # the cache action searches for key and restore-keys in the parent branch and
+      # upstream branches.
+      - uses: actions/cache@v3
+        with:
+          path: /root/.gradle/caches
+          # key: ${{ runner.os }}-gradle-${{ hashFiles('*.gradle', '*.gradle.kts', './*.gradle', './*.gradle.kts') }}
+          # hashFiles returns a single hash for the set of files that matches the path pattern
+          key: ${{ runner.os }}-gradle-framework-${{ hashFiles('./*.gradle*', './utbot-framework*/*.gradle*') }}
+          restore-keys: ${{ runner.os }}-gradle-framework
       - name: Run tests
         run: |
-          gradle --no-daemon :utbot-framework-test:test ${{ matrix.project.TESTS_TO_RUN }}
+          gradle --build-cache --no-daemon :utbot-framework-test:test ${{ matrix.project.TESTS_TO_RUN }}
+
       - name: Upload logs
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
@@ -117,47 +137,54 @@ jobs:
     runs-on: ubuntu-20.04
     container: unittestbot/java-env:java11-zulu-jdk-gradle7.4.2-kotlinc1.7.0
     steps:
-    - name: Print environment variables
-      run: printenv
+      - name: Print environment variables
+        run: printenv
 
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Check out ${{ github.event.inputs.commit_sha }} commit
+        if: github.event.inputs.commit_sha != ''
+        run: |
+          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git fetch
+          git checkout ${{ github.event.inputs.commit_sha }}
 
-    - name: Check out ${{ github.event.inputs.commit_sha }} commit
-      if: github.event.inputs.commit_sha != ''
-      run: |
-        git config --global --add safe.directory ${GITHUB_WORKSPACE}
-        git fetch
-        git checkout ${{ github.event.inputs.commit_sha }}
+      - name: Run monitoring
+        run: |
+          echo Find your Prometheus metrics using label {instance=\"${GITHUB_RUN_ID}-${HOSTNAME}\"}
+          chmod +x ./scripts/project/monitoring.sh
+          ./scripts/project/monitoring.sh ${{ secrets.PUSHGATEWAY_HOSTNAME }} ${{ secrets.PUSHGATEWAY_USER }} ${{ secrets.PUSHGATEWAY_PASSWORD }}
 
-    - name: Run monitoring
-      run: |
-        echo Find your Prometheus metrics using label {instance=\"${GITHUB_RUN_ID}-${HOSTNAME}\"}
-        chmod +x ./scripts/project/monitoring.sh
-        ./scripts/project/monitoring.sh ${{ secrets.PUSHGATEWAY_HOSTNAME }} ${{ secrets.PUSHGATEWAY_USER }} ${{ secrets.PUSHGATEWAY_PASSWORD }}
-    - name: Build project ${{ matrix.projects.first }}
-      id: first-project
-      run: |
-        cd ${{ matrix.projects.first }}
-        gradle build --no-daemon
-    - name: Build project ${{ matrix.projects.second }}
-      if: ${{ steps.first-project.outcome != 'cancelled' && steps.first-project.outcome != 'skipped' }}
-      run: |
-        cd ${{ matrix.projects.second }}
-        gradle build --no-daemon
-    - name: Upload test report if tests have failed
-      if: ${{ failure() }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: test_report ${{ matrix.projects.first }}
-        path: ${{ matrix.projects.first }}/build/reports/tests/test/*
+      - uses: actions/cache@v3
+        with:
+          path: /root/.gradle/caches
+          key: ${{ runner.os }}-gradle-combined-${{ hashFiles('./*.gradle*', './*/.gradle*') }}
+          restore-keys: ${{ runner.os }}-gradle-combined-
+      - name: Build project ${{ matrix.projects.first }}
+        id: first-project
+        run: |
+          cd ${{ matrix.projects.first }}
+          gradle build --build-cache --no-daemon
 
-    - name: Upload test report if tests have failed
-      if: ${{ failure() }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: test_report ${{ matrix.projects.second }}
-        path: ${{ matrix.projects.second }}/build/reports/tests/test/*
+      - name: Build project ${{ matrix.projects.second }}
+        if: ${{ steps.first-project.outcome != 'cancelled' && steps.first-project.outcome != 'skipped' }}
+        run: |
+          cd ${{ matrix.projects.second }}
+          gradle build --build-cache --no-daemon
+
+      - name: Upload test report if tests have failed
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_report ${{ matrix.projects.first }}
+          path: ${{ matrix.projects.first }}/build/reports/tests/test/*
+
+      - name: Upload test report if tests have failed
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_report ${{ matrix.projects.second }}
+          path: ${{ matrix.projects.second }}/build/reports/tests/test/*
         
 
   single-project:
@@ -180,7 +207,6 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Check out ${{ github.event.inputs.commit_sha }} commit
         if: github.event.inputs.commit_sha != ''
         run: |
@@ -193,10 +219,17 @@ jobs:
           echo Find your Prometheus metrics using label {instance=\"${GITHUB_RUN_ID}-${HOSTNAME}\"}
           chmod +x ./scripts/project/monitoring.sh
           ./scripts/project/monitoring.sh ${{ secrets.PUSHGATEWAY_HOSTNAME }} ${{ secrets.PUSHGATEWAY_USER }} ${{ secrets.PUSHGATEWAY_PASSWORD }}
+
+      - uses: actions/cache@v3
+        with:
+          path: /root/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ matrix.project }}-${{ hashFiles('./*.gradle*', format('{0}{1}{2}', './', matrix.project, '/*.gradle*')) }}
+          restore-keys: ${{ runner.os }}-gradle-${{ matrix.project }}-
       - name: Run tests
         run: |
           cd ${{ matrix.project }}
-          gradle build --no-daemon
+          gradle build --build-cache --no-daemon
+
       - name: Upload test report if tests have failed
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
