--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,12 @@
 kotlin.code.style=official
 
 # IU, IC, PC, PY, WS...
+# IC for AndroidStudio
 ideType=IC
+
+# In order to run Android Studion instead of Intellij Community,
+# specify the path to your Android Studio installation
+//androidStudioPath=D:/AS2021
 
 pythonCommunityPluginVersion=222.4167.37
 #Version numbers: https://plugins.jetbrains.com/plugin/631-python/versions
